# UPennContrast

./: package-lock.json  package.json  vue.config.js
itk/: CMakeLists.txt
itk/MaxInRegion/: CMakeLists.txt
itk/web-build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  itk-js-build-env  rules.ninja
itk/web-build/Max/: Max.js.mem  MaxWasm.js  cmake_install.cmake  itkJSPipelinePreMax.js  itkJSPipelinePreitkTestDriver.js
itk/web-build/Max/ITKFactoryRegistration/: itkImageIOFactoryRegisterManager.h
itk/web-build/Threshold/: Threshold.js.mem  ThresholdWasm.js  cmake_install.cmake  itkJSPipelinePreThreshold.js
public/config/: templates.json
src/: App.vue
src/components/: AnnotationProperty.vue  AnnotationViewer.vue  ImageViewer.vue  TagFilterEditor.vue
src/components/AnnotationBrowser/: AnnotationBrowser.vue  AnnotationFilters.vue  AnnotationList.vue  TagFilterEditor.vue
src/components/AnnotationBrowser/AnnotationProperties/: Property.vue  PropertyFilterHistogram.vue  PropertyList.vue
src/store/: GirderAPI.ts  annotation.ts  filters.ts  index.ts  model.ts  properties.ts  properties.worker.ts
src/tools/creation/: ToolConfiguration.vue  ToolCreation.vue
src/tools/creation/templates/: AnnotationConfiguration.vue
src/utils/: itk.ts
